--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -142,6 +142,8 @@
   width: 100%;
   text-align: left;
   border-collapse: collapse;
+  background-color: white;
+  border-radius: 5px;
 }
 
 .dialog:open {
